--- a/package.json
+++ b/package.json
@@ -1,25 +1,31 @@
 {
   "name": "react-cashmere",
+  "description": "React version of @HealthCatalyst/Fiber.Cashmere",
   "version": "0.1.0",
   "main": "index.js",
   "source": "src/index.js",
   "types": "dist/index.d.ts",
   "private": true,
+  "files": [
+    "dist",
+    "README.md"
+  ],
   "peerDependencies": {
     "@emotion/styled": "^11.9.3",
     "@mui/lab": "^5.0.0-alpha.88",
     "@mui/material": "^5.8.6",
+    "@healthcatalyst/cashmere": "^13.0.0",
     "font-awesome": "^4.7.0",
     "notosans-fontface": "^1.3.0"
   },
   "scripts": {
     "start": "npm run storybook",
-    "build": "webpack --mode=production --node-env=production",
+    "build": "npm run build:dev && npm run build:prod",
     "build:clean": "rm -rf ./dist",
     "build:dev": "webpack --mode=development",
     "build:prod": "webpack --mode=production --node-env=production",
     "build:storybook": "build-storybook -s public",
-    "postbuild": "cp tsconfig_for_types.json tsconfig.json && npx tsc && rm -f tsconfig.json",
+    "postbuild": "npx tsc",
     "storybook": "start-storybook -p 6006 -s public",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -87,6 +93,5 @@
     "web-vitals": "^2.1.4",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0"
-  },
-  "description": "My webpack project"
+  }
 }
