--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   ],
   "peerDependencies": {
     "@emotion/styled": "^11.9.3",
+    "@healthcatalyst/cashmere": "^13.1.0",
     "@mui/lab": "^5.0.0-alpha.88",
     "@mui/material": "^5.8.6",
-    "@healthcatalyst/cashmere": "^13.1.0",
     "font-awesome": "^4.7.0",
     "notosans-fontface": "^1.3.0"
   },
@@ -61,10 +61,13 @@
   },
   "devDependencies": {
     "@babel/plugin-syntax-jsx": "^7.18.6",
+    "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@healthcatalyst/cashmere": "^13.1.0",
+    "@mui/icons-material": "^5.8.4",
     "@mui/lab": "^5.0.0-alpha.88",
     "@mui/material": "^5.8.6",
+    "@mui/styles": "^5.9.1",
     "@storybook/addon-actions": "^6.5.9",
     "@storybook/addon-essentials": "^6.5.9",
     "@storybook/addon-interactions": "^6.5.9",
