--- a/package.json
+++ b/package.json
@@ -84,6 +84,8 @@
     "@webpack-cli/generators": "^2.5.0",
     "babel-plugin-named-exports-order": "^0.0.2",
     "css-loader": "^6.7.1",
+    "font-awesome": "^4.7.0",
+    "notosans-fontface": "^1.3.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
