--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "build:clean": "rm -rf ./dist",
     "build:dev": "webpack --mode=development",
     "build:prod": "webpack --mode=production --node-env=production",
-    "build:storybook": "build-storybook -s public",
+    "build:storybook": "build-storybook -c .storybook -o docs",
+    "lint": "eslint src",
     "postbuild": "npx tsc",
     "storybook": "start-storybook -p 6006 -s public",
     "test": "react-scripts test",
