--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@mui/lab": "^5.0.0-alpha.88",
     "@mui/material": "^5.8.6",
     "@mui/styles": "^5.9.1",
+    "@mui/x-date-pickers": "^5.0.0-beta.2",
     "@storybook/addon-actions": "^6.5.9",
     "@storybook/addon-essentials": "^6.5.9",
     "@storybook/addon-interactions": "^6.5.9",
