--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
   },
   "devDependencies": {
     "@babel/plugin-syntax-jsx": "^7.18.6",
+    "@date-io/moment": "^2.14.0",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@healthcatalyst/cashmere": "^13.1.0",
@@ -87,6 +88,7 @@
     "babel-plugin-named-exports-order": "^0.0.2",
     "css-loader": "^6.7.1",
     "font-awesome": "^4.7.0",
+    "moment": "^2.29.4",
     "notosans-fontface": "^1.3.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
