--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "react-cashmere",
+  "name": "@healthcatalyst/react-cashmere",
   "description": "React version of @HealthCatalyst/Fiber.Cashmere",
-  "version": "0.1.0",
+  "version": "0.0.1",
   "main": "index.js",
   "source": "src/index.js",
   "types": "dist/index.d.ts",
   "private": true,
   "files": [
     "dist",
+    "index.js",
     "README.md"
   ],
   "peerDependencies": {
@@ -22,13 +23,15 @@
     "start": "npm run storybook",
     "build": "npm run build:dev && npm run build:prod",
     "build:clean": "rm -rf ./dist",
-    "build:dev": "webpack --mode=development",
-    "build:prod": "webpack --mode=production --node-env=production",
-    "build:storybook": "build-storybook -c .storybook -o docs",
-    "lint": "eslint src",
+    "build:dev": "export NODE_ENV=development && webpack --mode=development",
+    "build:prod": "export NODE_ENV=production && webpack --mode=production --node-env=production",
+    "build:storybook": "build-storybook",
     "postbuild": "npx tsc",
     "storybook": "start-storybook -p 6006 -s public",
-    "test": "react-scripts test",
+    "test": "npm run test:lint && npm run test:unit",
+    "test:lint": "eslint ./src",
+    "test:unit": "CI=1 react-scripts test --env=jsdom --passWithNoTests",
+    "test:watch": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "watch": "webpack --watch"
   },
@@ -61,46 +64,46 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-syntax-jsx": "^7.18.6",
-    "@date-io/moment": "^2.14.0",
-    "@emotion/react": "^11.9.3",
-    "@emotion/styled": "^11.9.3",
-    "@healthcatalyst/cashmere": "^13.1.0",
-    "@mui/icons-material": "^5.8.4",
-    "@mui/lab": "^5.0.0-alpha.88",
-    "@mui/material": "^5.8.6",
-    "@mui/styles": "^5.9.1",
-    "@mui/x-date-pickers": "^5.0.0-beta.2",
-    "@storybook/addon-actions": "^6.5.9",
-    "@storybook/addon-essentials": "^6.5.9",
-    "@storybook/addon-interactions": "^6.5.9",
-    "@storybook/addon-links": "^6.5.9",
-    "@storybook/builder-webpack5": "^6.5.9",
-    "@storybook/manager-webpack5": "^6.5.9",
-    "@storybook/node-logger": "^6.5.9",
-    "@storybook/preset-create-react-app": "^4.1.2",
-    "@storybook/react": "^6.5.9",
-    "@storybook/testing-library": "^0.0.13",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@webpack-cli/generators": "^2.5.0",
-    "babel-plugin-named-exports-order": "^0.0.2",
-    "css-loader": "^6.7.1",
-    "font-awesome": "^4.7.0",
-    "moment": "^2.29.4",
-    "notosans-fontface": "^1.3.0",
-    "prop-types": "^15.8.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "@babel/plugin-syntax-jsx": "7.18.6",
+    "@date-io/moment": "2.14.0",
+    "@emotion/react": "11.9.3",
+    "@emotion/styled": "11.9.3",
+    "@healthcatalyst/cashmere": "13.1.0",
+    "@mui/icons-material": "5.8.4",
+    "@mui/lab": "5.0.0-alpha.88",
+    "@mui/material": "5.8.6",
+    "@mui/styles": "5.9.1",
+    "@mui/x-date-pickers": "5.0.0-beta.2",
+    "@storybook/addon-actions": "6.5.9",
+    "@storybook/addon-essentials": "6.5.9",
+    "@storybook/addon-interactions": "6.5.9",
+    "@storybook/addon-links": "6.5.9",
+    "@storybook/builder-webpack5": "6.5.9",
+    "@storybook/manager-webpack5": "6.5.9",
+    "@storybook/node-logger": "6.5.9",
+    "@storybook/preset-create-react-app": "4.1.2",
+    "@storybook/react": "6.5.9",
+    "@storybook/testing-library": "0.0.13",
+    "@testing-library/jest-dom": "5.16.4",
+    "@testing-library/react": "13.3.0",
+    "@testing-library/user-event": "13.5.0",
+    "@webpack-cli/generators": "2.5.0",
+    "babel-plugin-named-exports-order": "0.0.2",
+    "css-loader": "6.7.1",
+    "font-awesome": "4.7.0",
+    "moment": "2.29.4",
+    "notosans-fontface": "1.3.0",
+    "prop-types": "15.8.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-scripts": "5.0.1",
-    "sass": "^1.53.0",
-    "sass-loader": "^13.0.2",
-    "style-loader": "^3.3.1",
-    "ts-loader": "^9.3.1",
-    "typescript": "^4.7.4",
-    "web-vitals": "^2.1.4",
-    "webpack": "^5.73.0",
-    "webpack-cli": "^4.10.0"
+    "sass": "1.53.0",
+    "sass-loader": "13.0.2",
+    "style-loader": "3.3.1",
+    "ts-loader": "9.3.1",
+    "typescript": "4.7.4",
+    "web-vitals": "2.1.4",
+    "webpack": "5.73.0",
+    "webpack-cli": "4.10.0"
   }
 }
