--- a/package.json
+++ b/package.json
@@ -13,11 +13,10 @@
   ],
   "peerDependencies": {
     "@emotion/styled": "^11.9.3",
-    "@healthcatalyst/cashmere": "^13.1.0",
     "@mui/lab": "^5.0.0-alpha.88",
     "@mui/material": "^5.8.6",
-    "font-awesome": "^4.7.0",
-    "notosans-fontface": "^1.3.0"
+    "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
+    "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0"
   },
   "scripts": {
     "start": "npm run storybook",
