--- a/package.json
+++ b/package.json
@@ -68,20 +68,22 @@
     "@emotion/react": "11.9.3",
     "@emotion/styled": "11.9.3",
     "@healthcatalyst/cashmere": "13.1.0",
+    "@mdx-js/react": "2.1.2",
     "@mui/icons-material": "5.8.4",
     "@mui/lab": "5.0.0-alpha.88",
     "@mui/material": "5.8.6",
     "@mui/styles": "5.9.1",
     "@mui/x-date-pickers": "5.0.0-beta.2",
-    "@storybook/addon-actions": "6.5.9",
-    "@storybook/addon-essentials": "6.5.9",
-    "@storybook/addon-interactions": "6.5.9",
-    "@storybook/addon-links": "6.5.9",
-    "@storybook/builder-webpack5": "6.5.9",
-    "@storybook/manager-webpack5": "6.5.9",
-    "@storybook/node-logger": "6.5.9",
+    "@storybook/addon-actions": "6.5.10",
+    "@storybook/addon-essentials": "6.5.10",
+    "@storybook/addon-interactions": "6.5.10",
+    "@storybook/addon-links": "6.5.10",
+    "@storybook/builder-webpack5": "6.5.10",
+    "@storybook/manager-webpack5": "6.5.10",
+    "@storybook/mdx2-csf": "0.0.3",
+    "@storybook/node-logger": "6.5.10",
     "@storybook/preset-create-react-app": "4.1.2",
-    "@storybook/react": "6.5.9",
+    "@storybook/react": "6.5.10",
     "@storybook/testing-library": "0.0.13",
     "@testing-library/jest-dom": "5.16.4",
     "@testing-library/react": "13.3.0",
@@ -96,6 +98,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-scripts": "5.0.1",
+    "react-syntax-highlighter": "15.5.0",
     "sass": "1.53.0",
     "sass-loader": "13.0.2",
     "style-loader": "3.3.1",
