--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "include": ["src/**/*"],
-    "exclude": ["node_modules", "stories", "src/setupTests.js"],
+    "exclude": ["node_modules", "stories", "src/setupTests.js", "typings"],
     "compilerOptions": {
         "allowJs": true,
         "esModuleInterop": true,
