--- a/package.json
+++ b/package.json
@@ -76,6 +76,8 @@
     "@semantic-release/changelog": "6.0.1",
     "@semantic-release/exec": "6.0.3",
     "@semantic-release/git": "10.0.1",
+    "@semantic-release/github": "8.0.5",
+    "@semantic-release/npm": "9.0.1",
     "@storybook/addon-actions": "6.5.10",
     "@storybook/addon-essentials": "6.5.10",
     "@storybook/addon-interactions": "6.5.10",
