tweaking symantic release root and removing some obsolete release conditions.

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,9 +1,9 @@
 {
   "branches": ["master"],
-  "pkgRoot": "dist",
+  "pkgRoot": "./",
   "tarballDir": "dist",
   "assets": "healthcatalyst-react-cashmere-*.tgz",
-  "verifyConditions": ["@semantic-release/changelog", "@semantic-release/npm", "@semantic-release/git", "@semantic-release/github"],
+  "verifyConditions": ["@semantic-release/changelog", "@semantic-release/git"],
   "prepare": [
       {
           "path": "@semantic-release/changelog",
