--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
   "files": [
     "dist",
     "index.js",
+    "inpackage.json",
     "README.md"
   ],
   "peerDependencies": {
     "@emotion/styled": "^11.9.3",
-    "@mui/lab": "^5.0.0-alpha.88",
     "@mui/material": "^5.8.6",
     "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
     "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0"
@@ -76,8 +76,6 @@
     "@semantic-release/changelog": "6.0.1",
     "@semantic-release/exec": "6.0.3",
     "@semantic-release/git": "10.0.1",
-    "@semantic-release/github": "8.0.5",
-    "@semantic-release/npm": "9.0.1",
     "@storybook/addon-actions": "6.5.10",
     "@storybook/addon-essentials": "6.5.10",
     "@storybook/addon-interactions": "6.5.10",
