--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "main": "index.js",
   "source": "src/index.js",
   "types": "dist/index.d.ts",
-  "private": true,
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
+  },
   "files": [
     "dist",
     "index.js",
-    "inpackage.json",
     "README.md"
   ],
   "peerDependencies": {
@@ -92,7 +94,9 @@
     "@testing-library/user-event": "13.5.0",
     "@webpack-cli/generators": "2.5.0",
     "babel-plugin-named-exports-order": "0.0.2",
+    "commitizen": "^4.2.5",
     "css-loader": "6.7.1",
+    "cz-conventional-changelog": "^3.3.0",
     "font-awesome": "4.7.0",
     "moment": "2.29.4",
     "notosans-fontface": "1.3.0",
@@ -110,5 +114,10 @@
     "web-vitals": "2.1.4",
     "webpack": "5.73.0",
     "webpack-cli": "4.10.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
