--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "README.md"
   ],
   "peerDependencies": {
-    "@emotion/styled": "^11.9.3",
     "@mui/material": "^5.8.6",
     "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
-    "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0"
+    "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0",
+    "notosans-fontface": "^1.3.0",
+    "font-awesome": "^4.7.0",
+    "@healthcatalyst/cashmere": "^13.1.0"
   },
   "scripts": {
     "start": "npm run storybook",
@@ -67,13 +69,13 @@
   "devDependencies": {
     "@babel/plugin-syntax-jsx": "7.18.6",
     "@date-io/moment": "2.14.0",
-    "@emotion/react": "11.9.3",
-    "@emotion/styled": "11.9.3",
+    "@emotion/react": "11.10.0",
+    "@emotion/styled": "11.10.0",
     "@healthcatalyst/cashmere": "13.1.0",
     "@mdx-js/react": "2.1.2",
     "@mui/icons-material": "5.8.4",
     "@mui/lab": "5.0.0-alpha.88",
-    "@mui/material": "5.8.6",
+    "@mui/material": "5.10.1",
     "@mui/x-date-pickers": "5.0.0-beta.2",
     "@semantic-release/changelog": "6.0.1",
     "@semantic-release/exec": "6.0.3",
@@ -94,9 +96,9 @@
     "@testing-library/user-event": "13.5.0",
     "@webpack-cli/generators": "2.5.0",
     "babel-plugin-named-exports-order": "0.0.2",
-    "commitizen": "^4.2.5",
+    "commitizen": "4.2.5",
     "css-loader": "6.7.1",
-    "cz-conventional-changelog": "^3.3.0",
+    "cz-conventional-changelog": "3.3.0",
     "font-awesome": "4.7.0",
     "moment": "2.29.4",
     "notosans-fontface": "1.3.0",
