--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "build:dev": "export NODE_ENV=development && webpack --mode=development",
     "build:prod": "export NODE_ENV=production && webpack --mode=production --node-env=production",
     "build:storybook": "build-storybook -o docs",
+    "cm": "git-cz",
     "postbuild": "npx tsc --skipLibCheck",
     "storybook": "start-storybook -p 6006 -s public",
     "test": "npm run test:lint && npm run test:unit",
